# Aegis-Document-Intelligence-Version-Control-System-ADIVCS-

./: .gitignore  README.md
Aegis-Document-Intelligence-Version-Control-System-ADIVCS-/: CMakeLists.txt  LICENSE  README.md
Aegis-Document-Intelligence-Version-Control-System-ADIVCS-/gui/: CMakeLists.txt  main_qt.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Aegis-Document-Intelligence-Version-Control-System-ADIVCS-/src/: cli.cpp  diff_myers.cpp  diff_myers.h  main.cpp  model.h  storage.cpp  storage.h  versioning.cpp  versioning.h
aegis-docsys/gui/: CMakeLists.txt
tests/: test_versioning.cpp
web/backend/: app.py
web/frontend/src/: App.js
